Add Feature Game3 quizz

--- a/src/View/Game/gamethree_2.html.twig
+++ b/src/View/Game/gamethree_2.html.twig
@@ -9,30 +9,29 @@
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Question question question question question question question question question
-                        question question question ?</p>
+                    <p>Quelle est la différence entre le Tapir d'Asie et les autres tapirs ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-star icones-reponse"></i>  Réponse 1</p>
+                        <p><i class="fa fa-star icones-reponse"></i>  La couleur</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Réponse 2</p>
+                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Aucune différence</p>
                     </div>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-plane icones-reponse"></i>  Réponse 3</p>
+                        <p><i class="fa fa-plane icones-reponse"></i>  L'espérance de vie</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Réponse 4</p>
+                        <p><i class="fa fa-square icones-reponse ml-5"></i>  La taille</p>
                     </div>
                 </div>
                 <div class="text-center mt-4">
                     <p>Cliques sur la bonne image !</p>
                 </div>
                 <div class="icones-jeu text-center pb-2">
-                    <a href="" data-toggle="modal" data-target="#exampleModalCenter">
+                    <a href="" data-toggle="modal" data-target="#goodanswer">
                         <i class="fa fa-star"></i>
                     </a>
                     <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
@@ -41,7 +40,7 @@
                     <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-plane"></i>
                     </a>
-                    <a href="" class="pl-5" data-toggle="modal" data-target="#goodanswer">
+                    <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-square"></i>
                     </a>
                 </div>
@@ -74,10 +73,10 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            <p>Tu as raison, Le tapir d'Asie est blanc et noir alors que les autres tapirs sont bruns !</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gamethree_3" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gamethree_3" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
