--- a/src/View/Game/gamethree_4.html.twig
+++ b/src/View/Game/gamethree_4.html.twig
@@ -9,23 +9,22 @@
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Question question question question question question question question question
-                        question question question ?</p>
+                    <p>Dans quel pays vivent les Dragons de Komodo ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-star icones-reponse"></i>  Réponse 1</p>
+                        <p><i class="fa fa-star icones-reponse"></i>  En Allemagne</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Réponse 2</p>
+                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  En Chine</p>
                     </div>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-plane icones-reponse"></i>  Réponse 3</p>
+                        <p><i class="fa fa-plane icones-reponse"></i>  Au Mexique</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Réponse 4</p>
+                        <p><i class="fa fa-square icones-reponse ml-5"></i>  En Indonésie</p>
                     </div>
                 </div>
                 <div class="text-center mt-4">
@@ -74,10 +73,10 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            <p>Super, tu as raison, le Dragon de Komodo ne vit que sur certaines îles d'Indonésie, on ne le retrouve nul part ailleurs dans le monde !</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gamethree_5" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gamethree_5" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
