--- a/src/View/Game/gamethree_1.html.twig
+++ b/src/View/Game/gamethree_1.html.twig
@@ -4,28 +4,27 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-4 mt-1 game-title">
-                <h1>Troisième jeu</h1>
+                <h1>L'Asie Paradis</h1>
                 <h2>Question 1/5</h2>
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Question question question question question question question question question
-                        question question question ?</p>
+                    <p>Quel est le nombre de rhinocéros de Java dans le monde ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-star icones-reponse"></i>  Réponse 1</p>
+                        <p><i class="fa fa-star icones-reponse"></i>   53000 </p>
                     </div>
                     <div>
-                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Réponse 2</p>
+                        <p><i class="fa fa-circle icones-reponse ml-5"></i>   400 </p>
                     </div>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-plane icones-reponse"></i>  Réponse 3</p>
+                        <p><i class="fa fa-plane icones-reponse"></i>   60 </p>
                     </div>
                     <div>
-                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Réponse 4</p>
+                        <p><i class="fa fa-square icones-reponse ml-5"></i>   10000 </p>
                     </div>
                 </div>
                 <div class="text-center mt-4">
@@ -38,10 +37,10 @@
                     <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-circle"></i>
                     </a>
-                    <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
+                    <a href="" class="pl-5" data-toggle="modal" data-target="#goodanswer">
                         <i class="fa fa-plane"></i>
                     </a>
-                    <a href="" class="pl-5" data-toggle="modal" data-target="#goodanswer">
+                    <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-square"></i>
                     </a>
                 </div>
@@ -74,10 +73,10 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                           <p>Bravo, en effet  elle fait partie des espèces les plus menacées par le braconage ( chasse illégale) dans le monde ! On a estimé en 2019 le nombres de rhinocéros de Java a seulement 60 individus...</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gamethree_2" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gamethree_2" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
