--- a/src/View/Game/gamethree_3.html.twig
+++ b/src/View/Game/gamethree_3.html.twig
@@ -9,23 +9,22 @@
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Question question question question question question question question question
-                        question question question ?</p>
+                    <p>Quel est le principal ennemi de l'écureuil roux ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-star icones-reponse"></i>  Réponse 1</p>
+                        <p><i class="fa fa-star icones-reponse"></i>  L'ours</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Réponse 2</p>
+                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  La marte</p>
                     </div>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-plane icones-reponse"></i>  Réponse 3</p>
+                        <p><i class="fa fa-plane icones-reponse"></i>  Le cobra</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Réponse 4</p>
+                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Le paresseux</p>
                     </div>
                 </div>
                 <div class="text-center mt-4">
@@ -35,13 +34,13 @@
                     <a href="" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-star"></i>
                     </a>
-                    <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
+                    <a href="" class="pl-5" data-toggle="modal" data-target="#goodanswer">
                         <i class="fa fa-circle"></i>
                     </a>
                     <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-plane"></i>
                     </a>
-                    <a href="" class="pl-5" data-toggle="modal" data-target="#goodanswer">
+                    <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-square"></i>
                     </a>
                 </div>
@@ -74,10 +73,10 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            <p>En effet, La Marte est un petit animal carnivore qui ressemble à une fouine.</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gamethree_4" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gamethree_4" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
