--- a/src/View/Game/gamethree_5.html.twig
+++ b/src/View/Game/gamethree_5.html.twig
@@ -9,23 +9,22 @@
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Question question question question question question question question question
-                        question question question ?</p>
+                    <p>Quel est l'animal qui mange le plus bambou par jour ? </p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-star icones-reponse"></i>  Réponse 1</p>
+                        <p><i class="fa fa-star icones-reponse"></i>  Le Panda roux</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Réponse 2</p>
+                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Le Tapir</p>
                     </div>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-plane icones-reponse"></i>  Réponse 3</p>
+                        <p><i class="fa fa-plane icones-reponse"></i>  Le Panda</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Réponse 4</p>
+                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Le Dragon de Komodo</p>
                     </div>
                 </div>
                 <div class="text-center mt-4">
@@ -38,10 +37,10 @@
                     <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-circle"></i>
                     </a>
-                    <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
+                    <a href="" class="pl-5" data-toggle="modal" data-target="#goodanswer">
                         <i class="fa fa-plane"></i>
                     </a>
-                    <a href="" class="pl-5" data-toggle="modal" data-target="#goodanswer">
+                    <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-square"></i>
                     </a>
                 </div>
@@ -74,10 +73,10 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            Félicitations ! Tu as gagné, c'est Le Panda qui mange le plus de bambous par jours avec une moyenne de 15 à 30 kg par jours sois environs 600 tiges de bambou !
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gamethree_victoire" class="btn btn-primary">Cliques vite ici !</a>
+                            <a type="button" href="/game/gamethree_victoire" class="btn btn-warning">Cliques vite ici !</a>
                         </div>
                     </div>
                 </div>
