--- a/src/View/Game/gametwo_3.html.twig
+++ b/src/View/Game/gametwo_3.html.twig
@@ -4,12 +4,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-4 mt-1 game-title">
-                <h1>Deuxième jeu</h1>
+                <h1>En terre sauvage</h1>
                 <h2>Question 3/5</h2>
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Quel est cet animal qui vit en bandes organisées ?</p>
+                    <p>Quel animal vit en bandes organisées ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
