--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -160,6 +160,10 @@ a.button-card:hover {
     box-shadow: 6px 6px 4px black;
 }
 
+.game-card .mt-4 {
+    font-size: 1.5rem;
+}
+
 .icones-reponse {
     color: #557a24;
 }
