--- a/src/View/Game/gametwo_5.html.twig
+++ b/src/View/Game/gametwo_5.html.twig
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-4 mt-1 game-title">
-                <h1>Deuxième jeu</h1>
+                <h1>En terre sauvage</h1>
                 <h2>Question 5/5</h2>
             </div>
             <div class="col-6 offset-3 game-card">
