--- a/src/View/Game/indexgame.html.twig
+++ b/src/View/Game/indexgame.html.twig
@@ -28,7 +28,7 @@
                     <img class="card-img-top mt-3" src="https://s1.qwant.com/thumbr/0x380/2/c/25e91e15c316dc521c965057187fb3faa116f7f1e3c6eaae7c07237dbc2df6/maxresdefault.jpg?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2FtS4Un2l_Wy8%2Fmaxresdefault.jpg&q=0&b=1&p=0&a=1">
                     <div class="card-body">
                         <h4 class="card-title">L'Asie paradis</h4>
-                        <p class="card-text">Des montagnes de Chine aux steppes mongoles, les animaux asiatiques n'auront bientôt plus aucun secrets pour toi !</p>
+                        <p class="card-text">Des montagnes de Chine aux steppes mongoles, les animaux asiatiques n'auront bientôt plus aucun secret pour toi !</p>
                         <a type="button" class="btn btn-warning" href="/Game/gamethree_1">C'est parti !</a>
                     </div>
                 </div>
