--- a/src/View/Game/gameone_1.html.twig
+++ b/src/View/Game/gameone_1.html.twig
@@ -76,7 +76,7 @@
                             <p>Eh oui, les trois ! Mais il est très rare d’en croiser un, car ils évitent le plus souvent de croiser la route des hommes.</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gameone_2" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gameone_2" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
