--- a/src/View/Game/gameone_2.html.twig
+++ b/src/View/Game/gameone_2.html.twig
@@ -76,7 +76,7 @@
                             <p>Bien joué, c’est le bison. Très présent autrefois, sa population a été décimée par les colons européens arrivés en Amérique.</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gameone_3" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gameone_3" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
