--- a/src/View/Game/gameone_3.html.twig
+++ b/src/View/Game/gameone_3.html.twig
@@ -76,7 +76,7 @@
                             <p>C’est bien entendu le raton laveur !  Très intelligent, il n’hésite pas à se rapprocher de l’homme pour trouver de la nourriture.</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gameone_4" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gameone_4" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
