--- a/src/View/Game/gameone_4.html.twig
+++ b/src/View/Game/gameone_4.html.twig
@@ -76,7 +76,7 @@
                             <p>C’est déjà beaucoup ! Et en plus de ça, il peut rester plus d’une erreur en apnée sous l’eau.</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gameone_5" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gameone_5" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
