--- a/src/View/Game/gameone_5.html.twig
+++ b/src/View/Game/gameone_5.html.twig
@@ -67,16 +67,16 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalCenterTitle">Bravo tu as fini !</h5>
+                            <h5 class="modal-title" id="exampleModalCenterTitle">Bravo {{ sessions.pseudo }}, tu as fini !</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p>Pas facile ! Mais c’est bien le pygargue à tête blanche, un grand rapace, qui est le symbole des États-Unis. Et quelque chose nous dit que tu vas bientôt en apprendre plus à leur sujet…</p>
+                            <p>Pas facile ! Mais c’est bien le pygargue à tête blanche, un grand rapace, qui est le symbole des États-Unis. Et quelque chose nous dit que tu vas bientôt en apprendre plus à son sujet…</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gameone_victoire" class="btn btn-primary">Clique vite ici !</a>
+                            <a type="button" href="/game/gameone_victoire" class="btn btn-warning">Clique vite ici !</a>
                         </div>
                     </div>
                 </div>
