--- a/src/View/Game/gamethree_1.html.twig
+++ b/src/View/Game/gamethree_1.html.twig
@@ -4,31 +4,31 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-4 mt-1 game-title">
-                <h1>L'Asie Paradis</h1>
+                <h1>L'Asie paradis</h1>
                 <h2>Question 1/5</h2>
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Quel est le nombre de rhinocéros de Java dans le monde ?</p>
+                    <p>Quel est le nombre de rhinocéros <br>de Java dans le monde ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-star icones-reponse"></i>   53000 </p>
+                        <p><i class="fa fa-star icones-reponse"></i>  53 000</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-circle icones-reponse ml-5"></i>   400 </p>
+                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  400</p>
                     </div>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-plane icones-reponse"></i>   60 </p>
+                        <p><i class="fa fa-plane icones-reponse"></i>  60</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-square icones-reponse ml-5"></i>   10000 </p>
+                        <p><i class="fa fa-square icones-reponse ml-5"></i>  10 000</p>
                     </div>
                 </div>
                 <div class="text-center mt-4">
-                    <p>Cliques sur la bonne image !</p>
+                    <p>Clique sur la bonne image !</p>
                 </div>
                 <div class="icones-jeu text-center pb-2">
                     <a href="" data-toggle="modal" data-target="#exampleModalCenter">
@@ -55,7 +55,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            Retentes ta chance !
+                            Retente ta chance !
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
@@ -73,7 +73,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                           <p>Bravo, en effet  elle fait partie des espèces les plus menacées par le braconage ( chasse illégale) dans le monde ! On a estimé en 2019 le nombres de rhinocéros de Java a seulement 60 individus...</p>
+                           <p>En effet, elle fait partie des espèces les plus menacées par le braconnage (chasse illégale) dans le monde ! On a estimé en 2019 le nombre de rhinocéros de Java à seulement 60 individus...</p>
                         </div>
                         <div class="modal-footer">
                             <a type="button" href="/game/gamethree_2" class="btn btn-warning">Question suivante</a>
