--- a/src/View/Game/gamethree_2.html.twig
+++ b/src/View/Game/gamethree_2.html.twig
@@ -4,12 +4,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-4 mt-1 game-title">
-                <h1>Troisième jeu</h1>
+                <h1>L'Asie paradis</h1>
                 <h2>Question 2/5</h2>
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Quelle est la différence entre le Tapir d'Asie et les autres tapirs ?</p>
+                    <p>Quelle est la différence entre le tapir d'Asie <br>et les autres tapirs ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="text-center mt-4">
-                    <p>Cliques sur la bonne image !</p>
+                    <p>Clique sur la bonne image !</p>
                 </div>
                 <div class="icones-jeu text-center pb-2">
                     <a href="" data-toggle="modal" data-target="#goodanswer">
@@ -55,7 +55,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            Retentes ta chance !
+                            Retente ta chance !
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
@@ -73,7 +73,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p>Tu as raison, Le tapir d'Asie est blanc et noir alors que les autres tapirs sont bruns !</p>
+                            <p>Tu as raison, le tapir d'Asie est blanc et noir, alors que les autres sont bruns !</p>
                         </div>
                         <div class="modal-footer">
                             <a type="button" href="/game/gamethree_3" class="btn btn-warning">Question suivante</a>
