--- a/src/View/Game/gamethree_victoire.html.twig
+++ b/src/View/Game/gamethree_victoire.html.twig
@@ -5,11 +5,12 @@
         <div class="row">
             <div class="col-4 ml-5 description">
                 <div class="">
-                    <h1><i class="fa iconfinal fa-star"></i> Le Panda Géant</h1>
-                    <p>Le panda géant vit dans les régions montagneuses de Chine, entre 1 500 et 3 400 mètres d'altitude.</p>
+                    <h1><i class="fa iconfinal fa-star"></i> Le panda géant</h1>
+                    <!--<p><i class="fa fa-circle video-cligno"></i> Ici en direct vidéo</p>-->
+                    <p>Le panda géant vit dans les régions montagneuses de Chine, entre 1 500 <br>et 3 400 mètres d'altitude.</p>
                     <p>Bien qu'il soit classé parmi les carnivores, il mange presque exclusivement des pousses de bambou.
                         Il consacre près de 14 heures de sa journée à s'alimenter. Le reste du temps, il le passe à dormir !</p>
-                    <p>Le panda géant, espèce menacée, symbolise la protection de l'environnement.</p>
+                    <p>Le panda géant, espèce menacée, symbolise la protection de l'environnement à travers le monde entier.</p>
                 </div>
             </div>
             <div class="col-7 ml-4">
