--- a/src/View/Game/gametwo_1.html.twig
+++ b/src/View/Game/gametwo_1.html.twig
@@ -76,7 +76,7 @@
                             <p>On l'appelle ainsi à cause de sa crinière majestueuse, qui ressemble à une couronne. Et surtout parce que les lions sont les plus gros prédateurs de la savane.</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gametwo_2" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gametwo_2" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
