--- a/src/View/Game/gametwo_2.html.twig
+++ b/src/View/Game/gametwo_2.html.twig
@@ -73,10 +73,10 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p>c'est de la graisse qui est présent sur la bosse des dromadaires, ceci sont des réserve  d'énergie.</p>
+                            <p>C'est de la graisse qui est présente dans la bosse des dromadaires. Elle leur sert de réserve d'énergie.</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gametwo_3" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gametwo_3" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
