--- a/src/View/Game/gametwo_3.html.twig
+++ b/src/View/Game/gametwo_3.html.twig
@@ -76,7 +76,7 @@
                             <p>Les babouins vivent en groupes de 50 individus généralement.</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gametwo_4" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gametwo_4" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
