--- a/src/View/Game/gametwo_4.html.twig
+++ b/src/View/Game/gametwo_4.html.twig
@@ -73,10 +73,10 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p>ces 4 animaux énormément braconné mais celui qui subit le plus le braconnage c'est le pangolin</p>
+                            <p>Ces quatre animaux sont énormément braconnés, mais c'est le pangolin qui en est le plus victime.</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gametwo_5" class="btn btn-primary">Question suivante</a>
+                            <a type="button" href="/game/gametwo_5" class="btn btn-warning">Question suivante</a>
                         </div>
                     </div>
                 </div>
