--- a/src/View/Game/gametwo_5.html.twig
+++ b/src/View/Game/gametwo_5.html.twig
@@ -67,7 +67,7 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalCenterTitle">Bravo tu as fini !</h5>
+                            <h5 class="modal-title" id="exampleModalCenterTitle">Bravo {{ sessions.pseudo }}, tu as fini !</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -76,7 +76,7 @@
                             <p>Eh oui, la trompe de l'éléphant pèse bien 100 kg ! Elle lui  sert à respirer, ou encore à attraper son repas et le porter à sa bouche.</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gametwo_victoire" class="btn btn-primary">Clique vite ici !</a>
+                            <a type="button" href="/game/gametwo_victoire" class="btn btn-warning">Clique vite ici !</a>
                         </div>
                     </div>
                 </div>
