--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-8 offset-2">
-            <h1 class="hometitle text-center">Voyagez Malin !</h1>
+            <h1 class="hometitle text-center">Voyager Malin !</h1>
             </div>
                     <div class="col-8 offset-2">
                        <p class="hometext text-center">Ce n'est pas parce qu'on est en période de confinement
