--- a/src/View/Game/gamethree_5.html.twig
+++ b/src/View/Game/gamethree_5.html.twig
@@ -4,31 +4,31 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-4 mt-1 game-title">
-                <h1>Troisième jeu</h1>
+                <h1>L'Asie paradis</h1>
                 <h2>Question 5/5</h2>
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Quel est l'animal qui mange le plus bambou par jour ? </p>
+                    <p>Quel animal mange le plus de bambou par jour ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-star icones-reponse"></i>  Le Panda roux</p>
+                        <p><i class="fa fa-star icones-reponse"></i>  Le panda roux</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Le Tapir</p>
+                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Le tapir</p>
                     </div>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-plane icones-reponse"></i>  Le Panda</p>
+                        <p><i class="fa fa-plane icones-reponse"></i>  Le panda</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Le Dragon de Komodo</p>
+                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Le dragon de Komodo</p>
                     </div>
                 </div>
                 <div class="text-center mt-4">
-                    <p>Cliques sur la bonne image !</p>
+                    <p>Clique sur la bonne image !</p>
                 </div>
                 <div class="icones-jeu text-center pb-2">
                     <a href="" data-toggle="modal" data-target="#exampleModalCenter">
@@ -55,7 +55,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            Retentes ta chance !
+                            Retente ta chance !
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
@@ -67,16 +67,16 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalCenterTitle">Bravo tu as fini !</h5>
+                            <h5 class="modal-title" id="exampleModalCenterTitle">Bravo {{ sessions.pseudo }}, tu as fini !</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            Félicitations ! Tu as gagné, c'est Le Panda qui mange le plus de bambous par jours avec une moyenne de 15 à 30 kg par jours sois environs 600 tiges de bambou !
+                            Félicitations ! Tu as gagné, c'est le panda qui mange le plus de bambou avec une moyenne de 15 à 30 kg par jour, soit environ 600 tiges !
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gamethree_victoire" class="btn btn-warning">Cliques vite ici !</a>
+                            <a type="button" href="/game/gamethree_victoire" class="btn btn-warning">Clique vite ici !</a>
                         </div>
                     </div>
                 </div>
